--- a/artVideo.html
+++ b/artVideo.html
@@ -10,7 +10,15 @@
    <body>
     <header>
     <h1>Pollock Videos</h1>
-        <nav><a href = artMain.html>HOME</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href = artWork.html>WORK</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href = artBiography.html>BIOGRAPHY</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href = artVideo.html>VIDEOS</a></nav>
+        <ul> 
+            <nav>
+                <a href = artMain.html><li>HOME</li></a>
+                <a href = artWork.html><li>WORK</li></a>
+                <a href = artBiography.html><li>BIOGRAPHY</li></a>
+                <a href = artVideo.html><li>VIDEOS</li></a>
+            </nav> 
+        </ul>
+    <!--<nav><a href = artMain.html>HOME</a><a href = artWork.html>WORK</a><a href = artBiography.html>BIOGRAPHY</a><a href = artVideo.html>VIDEOS</a></nav>-->
     </header>
 
     <ol>
@@ -23,9 +31,10 @@
     <li> Video 4 </li>
     </ol>
 
-   </body>
 
-
-
+   <footer>
+    <small><i> <a href = “eh26678p@pace.edu”>eh26678p@pace.edu</a> </i></small>
+  </footer>
+</body>
 
 </html> 
