added images for lab 5

--- a/artBiography.html
+++ b/artBiography.html
@@ -21,6 +21,8 @@
        <!-- <nav><a href = artMain.html>HOME</a><a href = artWork.html>WORK</a><a href = artBiography.html>BIOGRAPHY</a><a href = artVideo.html>VIDEOS</a></nav> -->
     </header>
 
+    <img src="assets/WebPollock/Pollock(1).jpg" alt="pollock biography" class="image3">
+
         <ul>
         <li>Jackson Pollock was born on January 28th, 1912 and died on August 11th, 1956.</li>
         <br>
