--- a/artMain.html
+++ b/artMain.html
@@ -22,10 +22,15 @@
        <!-- <nav><a href = artMain.html>HOME</a><a href = artWork.html>WORK</a><a href = artBiography.html>BIOGRAPHY</a><a href = artVideo.html>VIDEOS</a></nav> -->
       </header>
 
-    <main id = "main-content">   
-     <p> 
+      <img src = "assets/WebPollock/PollockBanner.jpg"
+      srcset="assets/WebPollock/PollockBanner.jpg 100w, assets/WebPollock/PollockBanner(1).jpg 50w"
+      alt="Pollock Painting" class="image1"
+      >
+      
+    <main id = "main-content">  
+     <p>
         Jackson Pollock was an American painter with a unique and abstract expressionist style.
-        <br>
+        <br> <br>
         Explore our website to learn more about Pollock's work and legacy!
      </p>
     </main>  
@@ -33,6 +38,4 @@
        <small><i> <a href = “eh26678p@pace.edu”>eh26678p@pace.edu</a> </i></small>
      </footer>
     </body>
-
-
 </html> 
