--- a/artWork.html
+++ b/artWork.html
@@ -20,7 +20,10 @@
       </ul>
         <!--<nav><a href = artMain.html>HOME</a><a href = artWork.html>WORK</a><a href = artBiography.html>BIOGRAPHY</a><a href = artVideo.html>VIDEOS</a></nav>-->
       </header>
-
+      
+        <img src="assets/WebPollock/Pollock(2).jpg" alt="Pollock Painting" class="image2"
+        >
+     
      <p> 
         <strong>Blue Poles</strong>
         <br>
