updated files and CSS for lab6

--- a/artMain.html
+++ b/artMain.html
@@ -21,11 +21,10 @@
      </ul>
        <!-- <nav><a href = artMain.html>HOME</a><a href = artWork.html>WORK</a><a href = artBiography.html>BIOGRAPHY</a><a href = artVideo.html>VIDEOS</a></nav> -->
       </header>
-
-      <img src = "assets/WebPollock/PollockBanner.jpg"
-      srcset="assets/WebPollock/PollockBanner.jpg 100w, assets/WebPollock/PollockBanner(1).jpg 50w"
-      alt="Pollock Painting" class="image1"
-      >
+      <picture>
+        <source srcset="assets/WebPollock/PollockBanner(1).jpg" media="(max-width: 600px)">
+        <img src="assets/WebPollock/PollockBanner.jpg" alt="Pollock Painting" class="image1">
+     </picture>
       
     <main id = "main-content">  
      <p>
