fixed nav bar lab 6 issue and completed lab 7

--- a/artBiography.html
+++ b/artBiography.html
@@ -30,6 +30,37 @@
         <br>
         <li>He used a drip technique to create his abstract work.</li>
         </ul>
+
+        <table>
+        <h2>Pollock's Paintings</h2>
+        <thead>
+            <tr>
+                <th>Name of Work</th>
+                <th>Year</th>
+            </tr>  
+        </thead>
+        <tbody>
+            <tr>
+                <td>Moon Woman</td>
+                <td>1942</td>
+            </tr> 
+            <tr>
+                <td>Mural</td>
+                <td>1943</td>
+            </tr>
+            <tr>
+                <td>Convergence</td>
+                <td>1952</td>
+            </tr>
+            <tr>
+                <td>The Deep</td>
+                <td>1953</td>
+            </tr>
+        </tbody>
+        </table>
+
+        <br><br>
+
         <footer>
             <small><i> <a href = “eh26678p@pace.edu”>eh26678p@pace.edu</a> </i></small>
           </footer>
