--- a/artVideo.html
+++ b/artVideo.html
@@ -30,7 +30,35 @@
     <br>
     <li> Video 4 </li>
     </ol>
+    <br><br>
 
+<form action="success.html" method="get" name="form" id="form"></form>
+    <form>
+        <label for="name">Name:</label><br>
+        <input type="text" id="name" name="name"><br><br>
+        <label for="email">Email:</label><br>
+        <input type="text" id="email" name="email"><br><br><br>
+
+        <label>Do you like Pollock's Work?</label><br>
+        <input type="checkbox" id="choice1" name="choice1" value="yes">
+        <label for="choice1"> Yes </label><br>
+        <input type="checkbox" id="choice2" name="choice2" value="no">
+        <label for="choice2"> No </label><br>
+        <input type="checkbox" id="choice3" name="choice3" value="unsure">
+        <label for="choice3"> Unsure </label><br>
+    
+        <br><br>
+        <label>Which Pollock Painting Do Favor?</label><br>
+
+    <select name="pollockWork" id="pWork">
+        <option value="">--Please choose an option--</option>
+        <option value="bpoles">Blue Poles</option>
+        <option value="convergence">Convergence</option>
+        <option value="ffive">Full Fathom Five</option>
+        <option value="mural">Mural</option>
+    </select><br><br><br>
+
+    </form>
 
    <footer>
     <small><i> <a href = “eh26678p@pace.edu”>eh26678p@pace.edu</a> </i></small>
